# PSC

./: .env.example  README.md  pyproject.toml
admin_web/: app.js  index.html  styles.css
scripts/: build_admin_exe.ps1  build_exe.ps1
sql/: 001_schema.sql  002_seed_example.sql  003_add_indicator_value_history.sql  004_scorecard_tnd_indicators.sql  005_roles_table_and_fk.sql  006_add_bitrix_responsible_id_to_action_plans.sql  007_split_financeiro_caixa_competencia.sql  008_add_action_plan_segment_fields.sql  009_create_indicator_units.sql  010_add_indicators_unit_fk.sql  011_add_area_hex_color.sql  012_create_indicator_month_targets.sql  013_reframe_weekly_values_to_four_ranges.sql  014_remove_legacy_action_plan_fields.sql  015_keep_only_financeiro_caixa_e_competencia.sql  016_remove_indicator_fixed_target.sql  017_add_users_can_edit_projected_value.sql  018_create_indicator_month_projections.sql  019_add_latest_aggregation_user_area_access_and_admin_support.sql
src/adapters/input/: api_routes.py
src/adapters/output/: bitrix_task_gateway.py  local_writer.py  supabase_bitrix_user_directory.py  supabase_repositories.py
src/admin/: __init__.py  users_app.py
src/app/: main.py  start_server.py  wiring.py
src/core/domain/: models.py  rules.py
src/core/ports/: reader.py  repositories.py  (+2 more)
src/infra/: bitrix_client.py  config.py  logging.py  supabase_client.py
tests/: test_admin_users.py  test_bitrix_task_gateway.py  test_list_indicators_order.py  test_rules.py  test_supabase_bitrix_user_directory.py  test_use_case.py
web/: app.js  index.html  styles.css
(+14 files in other folders)
